# Agriculture-data-ML-Based-Attack-Detection

./: .gitignore  problem statement.txt
backend/: .env.example  .gitignore  agri_iot.db  alembic.ini  fix_audit.py  fix_db.py  fix_health.py  fix_models.py  pyproject.toml  rewrite_attack.py  test_api.py  test_sim.py  verify_sim.py
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep
backend/app/: __init__.py  config.py  main.py
backend/app/api/: deps.py
backend/app/blockchain/: __init__.py  audit_trail.py  block.py  chain.py  validator.py
backend/app/core/: __init__.py  constants.py  enums.py  exceptions.py  logging.py
backend/app/database/: __init__.py  redis.py  session.py
backend/app/gateway/: __init__.py
backend/app/ml/: __init__.py
backend/app/models/: __init__.py  audit_log.py  base.py  benchmark_result.py  blockchain.py  device.py  device_health.py  device_key.py  drift_event.py  model_registry.py  nonce_store.py  sensor_data.py  trust_event.py  user.py
backend/app/schemas/: attack_sim.py  audit.py  blockchain.py  device.py  device_health.py  drift.py  evaluation.py  ml.py  sensor_data.py  token.py  trust.py  user.py
backend/app/security/: __init__.py  crypto.py  gateway.py  jwt.py  password.py
backend/app/services/: attack_sim_service.py  device_health_service.py  device_service.py  (+7 more)
backend/docker/: Dockerfile  Dockerfile.dev  docker-compose.yml
backend/key_vault/: .gitkeep
backend/scripts/: compute_training_distributions.py  export_models.py  run_benchmarks.py  seed_db.py
backend/tests/: __init__.py  conftest.py
(+61 files in other folders)
