[project]
name = "agri-iot-security-backend"
version = "1.0.0"
description = "Blockchain-Enabled Lightweight Security Framework with ML for Smart Agriculture IoT Networks"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Alisha" },
]

dependencies = [
    # ── Core ──
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",

    # ── Database ──
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "redis[hiredis]>=5.0",

    # ── Security ──
    "cryptography>=44.0",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "bcrypt<4.0.0",

    # ── ML ──
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "lightgbm>=4.5",
    "catboost>=1.2",
    "joblib>=1.4",
    "pandas>=2.2",
    "numpy>=2.0",
    "scipy>=1.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "aiosqlite>=0.20",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
